# smallstr

./: Cargo.toml
src/: string.rs
